SONAR-11762 Fix wrapping issue on Chrome on Windows

--- a/server/sonar-web/src/main/js/apps/projectActivity/components/projectActivity.css
+++ b/server/sonar-web/src/main/js/apps/projectActivity/components/projectActivity.css
@@ -117,7 +117,7 @@
 .project-activity-time {
   flex-shrink: 0;
   flex-grow: 0;
-  width: 54px;
+  width: 58px;
   height: var(--smallControlHeight);
   line-height: var(--smallControlHeight);
   box-sizing: border-box;
